# scope-noise

./: README.md  pyproject.toml
src/scope_noise/: __init__.py  noise.py  pipeline.py  schema.py
