[project]
name = "scope-noise"
version = "0.1.0"
description = "Simplex 3D noise generator for Daydream Scope, inspired by TouchDesigner's Noise TOP"
requires-python = ">=3.12"

[project.entry-points."scope"]
scope_noise = "scope_noise"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_noise"]
